cambio de home a navbar y header agregado

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -14,6 +14,9 @@
     </style>
   </head>
   <body>
-    <<img src="home.jpg" alt="Header de invie">
+    <img src="navbar.png" alt="Header de invie">
+    <img src="header.png" alt="hero banner">
+    <img src="content.png" alt="">
+    <img src="footer.png" alt="pie de pagina">
   </body>
 </html>
