Se retira el footer del codigo del index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <img src="navbar.png" alt="Header de invie">
     <img src="header.png" alt="hero banner">
     <img src="content.png" alt="">
-    <img src="footer.png" alt="pie de pagina">
+    <!-- <img src="footer.png" alt="pie de pagina"> -->
+    <!-- Una nueva linea de texto -->
   </body>
 </html>
