Integracion de archivo nuevo cambio e index con h1

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <img src="navbar.png" alt="Header de invie">
     <img src="header.png" alt="hero banner">
     <img src="content.png" alt="">
+    <h1>Este es un nuevo cambio realizado en el archivo.</h1>
     <img src="davidcohen-ewxTqdfrYOU-unsplash.jpg" alt="" id="responsive">
     <!-- <img src="footer.png" alt="pie de pagina"> -->
     <!-- Una nueva linea de texto -->
